feat: add clsx dependency and implement new components for course details
- Added clsx library to package.json for conditional class names.
- Created Clock.svg, Frame.svg, User.svg, and range.svg icons for course components.
- Developed CourseVideo, CourseProgressCard, AnimationCourseCard, DescriptionComponent, and TabComponent for enhanced course detail display.
- Updated MyCourses component to utilize new components and manage course progress.
- Enhanced global styles to include new font variables.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,13 @@
 :root {
   --font-sans: var(--font-maven);
   --font-mono: var(--font-geist-mono);
+  --font-jakarta: var(--font-plus-jakarta);
 }
 
 body {
   font-family: var(--font-sans);
+}
+
+.jakarta {
+  font-family: var(--font-jakarta)
 }
