worked on making edit assigment a new page and make sure updates are working properly

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,12 @@ body {
   font-family: var(--font-sans);
 }
 
+@layer base {
+  button {
+    @apply cursor-pointer;
+  }
+}
+
 .jakarta {
   font-family: var(--font-jakarta);
 }
